--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PP Choose from file</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <!--gabut bat bikin ginian dah-->
         <img id="profile" src="img.png" alt="" width="200" height="200"/>
         <br>
         <br>
         <br>
         <input type="file" 
             onchange="document.getElementById('profile').src = window.URL.createObjectURL(this.files[0])"> 
-
+        <!--gapapa dah yeng penting keren-->
 </body>
 <script src="pp.js"></script>
 </html>
