--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <!--gabut bat bikin ginian dahhhhhhhhhh-->
+        <!--gabut bat bikin ginian dahhhhhhhhh-->
         <img id="profile" src="img.png" alt="" width="200" height="200"/>
         <br>
         <br>
